<resources>
    <string name="app_name">Mendakuy</string>
    <string name="title_home">HOME</string>
    <string name="title_explore">EXPLORE</string>
    <string name="title_create">CREATE</string>
    <string name="title_guide">GUIDE</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="btn_create">Create</string>
    <string name="btn_decline">Decline</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_register">Register</string>
    <string name="tv_fullname">Fullname</string>
    <string name="tv_phoneNumber">Phone Number</string>


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_update_profile">activity_update_profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="profile_image" />

</resources>