<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.updateprofile.UpdateProfileActivity"
    android:background="@color/bg100">

    <RelativeLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/layout_bg_header">

        <Button
            android:id="@+id/btnBack"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            app:icon="@drawable/ic_btn_back" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="UPDATE PROFILE"
            android:textSize="@dimen/text_super_large"
            android:textColor="@color/text100" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_pic"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="46dp"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="-35dp"
            android:layout_marginTop="100dp"
            android:layout_toRightOf="@id/iv_profile_pic"
            android:contentDescription="Edit Profile"
            android:backgroundTint="@color/accent200"
            android:src="@drawable/googleg_standard_color_18" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_profile_pic"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="20dp"
            android:padding="6dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:layout_marginHorizontal="36dp"
            android:padding="10dp"
            android:textColor="@color/text100"
            android:background="@drawable/layout_bg"
            android:textSize="@dimen/text_medium"
            />

        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_username"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/tv_fullname"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium" />

        <EditText
            android:id="@+id/et_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_fullname"
            android:layout_marginHorizontal="36dp"
            android:padding="10dp"
            android:textColor="@color/text100"
            android:background="@drawable/layout_bg"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/tv_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_fullName"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/tv_phoneNumber"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium" />

        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phoneNumber"
            android:layout_marginHorizontal="36dp"
            android:padding="10dp"
            android:textColor="@color/text100"
            android:background="@drawable/layout_bg"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_phoneNumber"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_password"
            android:layout_marginHorizontal="36dp"
            android:padding="10dp"
            android:textColor="@color/text100"
            android:background="@drawable/layout_bg"
            android:textSize="@dimen/text_medium" />

        <Button
            android:id="@+id/btn_updateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Update Profile"/>

    </RelativeLayout>

</RelativeLayout>